Tweaked the Landing Page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,28 @@
 <!DOCTYPE html>
+<!--
+ODOZii Github -  2020
+=====================================================================================
+  Site created by ODOZii - www.odozii.com
+  Design and Development by Francis Isibor
+=====================================================================================
+-->
 <html>
+<head>
+  <title>Home | ODOZii Github</title>
+
+  <link href="css/styles.css" rel="stylesheet" type="text/css" />
+  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300&display=swap" rel="stylesheet">
+
+  <link rel="shortcut icon" href="images/fav.jpg" >
+	<link rel="image_src" href="images/thumbnail.jpg" />
+
+</head>
+
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+  <div id="main">
+    <h1>ODOZii.com</h1>
+  </div>
+
+
 </body>
 </html>
