Welcome to ODOZii

--- a/index.html
+++ b/index.html
@@ -20,7 +20,14 @@ ODOZii Github -  2020
 
 <body>
   <div id="main">
-    <h1>ODOZii.com</h1>
+    <div class="fullscreen">
+      <div class="centerouter blackbg">
+        <div class="centermiddle lighttxt centerjustified">
+          <h1>Welcome to ODOZii</h1>
+        </div>
+      </div>
+    </div>
+
   </div>
 
 
