--- a/index.html
+++ b/index.html
@@ -11,21 +11,48 @@ ODOZii Github -  2020
   <title>Home | ODOZii Github</title>
 
   <link href="css/styles.css" rel="stylesheet" type="text/css" />
-  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
 
   <link rel="shortcut icon" href="images/fav.jpg" >
 	<link rel="image_src" href="images/thumbnail.jpg" />
 
 </head>
 
-<body>
+<body class="darkbg">
   <div id="main">
     <div class="fullscreen">
-      <div class="centerouter blackbg">
-        <div class="centermiddle lighttxt centerjustified">
-          <h1>Welcome to ODOZii</h1>
+      <div id="hero" class="">
+        <div class="centerouter darkbg">
+          <div class="centermiddle leftjustified">
+            <div class="basicwrapper hero_type">
+              <h5 class="lighttxt">Welcome to ODOZii</h5>
+              <h1 class="whitetxt">Life, Love & Creativity</h1>
+            </div>
+          </div>
         </div>
       </div>
+      <div id="contact" class="darkbg">
+        <div class="basicwrapper contact_type">
+          <div class="centerouter">
+            <div class="centermiddle darktxt leftjustified">
+              <div class="col4 leftfloat">
+                <h5 class="greytxt">Dribble</h5>
+              </div>
+              <div class="col4 leftfloat">
+                <h5 class="greytxt">Instagram</h5>
+              </div>
+              <div class="col4 leftfloat">
+                <h5 class="greytxt">Youtube</h5>
+              </div>
+              <div class="col4 leftfloat">
+                <h5 class="greytxt">odozii.com</h5>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
 
   </div>
