--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@ ODOZii Github -  2020
           <div class="centermiddle leftjustified">
             <div class="basicwrapper hero_type">
               <h5 class="lighttxt">Welcome to ODOZii</h5>
-              <h1 class="whitetxt">Life, Love & Creativity</h1>
+              <!-- <h1 class="whitetxt">Life, Love & Creativity</h1> -->
+              <h1 class="whitetxt">Web, Motion, Graphics, Film</h1>
             </div>
           </div>
         </div>
@@ -45,7 +46,7 @@ ODOZii Github -  2020
                 <h5 class="greytxt">Youtube</h5>
               </div>
               <div class="col4 leftfloat">
-                <h5 class="greytxt">odozii.com</h5>
+                <h5 class="greytxt">Website</h5>
               </div>
 
             </div>
